# hunterMakesPy

./: .editorconfig  .gitignore  CITATION.cff  MANIFEST.in  README.md  context7.json  hunterMakesPy.code-workspace  pyproject.toml  ruff.toml  setup.py
.github/: HH-docstrings.md  HH-formatting.md  HH-type-annotations.md
.github/scripts/: http_cache_fetch.py
.github/workflows/: githubRelease.yml  linkCheck.yml  pypiRelease.yml  pythonTests.yml  updateCitation.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md
Z0Z_transform/: factory.py
assimilate/: __init__.py  _theSSOT.py  chopShop.py  factory.py  refine_humpy.py  synchronizeFiles.py
citations/: CITATION.cff
humpy_cytoolz/: Notice_of_Copyright.txt  __init__.pxd  __init__.py  __init__.pyi  _signatures.py  _signatures.pyi  compatibility.py  compatibility.pyi  dicttoolz.c  dicttoolz.pyi  dicttoolz.pyx  functoolz.c  functoolz.pyi  functoolz.pyx  itertoolz.c  itertoolz.pyi  itertoolz.pyx  recipes.c  recipes.pyi  recipes.pyx  utils.c  utils.pyi  utils.pyx
humpy_cytoolz/curried/: __init__.py  exceptions.py  exceptions.pyi  operator.py
humpy_cytoolz/tests/: dev_skip_test.py  test_compatibility.py  test_curried.py  test_curried_toolzlike.py  test_dev_skip_test.py  test_dicttoolz.py  test_docstrings.py  test_doctests.py  test_embedded_sigs.py  test_functoolz.py  test_inspect_args.py  test_itertoolz.py  test_none_safe.py  test_recipes.py  test_serialization.py  test_signatures.py  test_tlz.py  test_utils.py
humpy_tlz/: __init__.py  _build_tlz.py
humpy_toolz/: Notice_of_Copyright.txt  __init__.py  __init__.pyi  _signatures.py  _version.py  compatibility.py  dicttoolz.py  dicttoolz.pyi  functoolz.py  functoolz.pyi  itertoolz.py  itertoolz.pyi  recipes.py  recipes.pyi  utils.py  utils.pyi
humpy_toolz/curried/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi  operator.py  operator.pyi
humpy_toolz/sandbox/: __init__.py  core.py  core.pyi  parallel.py  parallel.pyi
humpy_toolz/sandbox/tests/: test_core.py  test_parallel.py
humpy_toolz/tests/: ruff.toml  test_compatibility.py  test_curried.py  test_curried_doctests.py  test_dicttoolz.py  test_functoolz.py  test_inspect_args.py  test_itertoolz.py  test_package.py  test_recipes.py  test_serialization.py  test_signatures.py  test_tlz.py  test_utils.py
hunterMakesPy/: Z0Z_CallableFunction.py  __init__.py  _theSSOT.py  coping.py  dataStructures.py  filesystemToolkit.py  parseParameters.py  pytestForYourUse.py  semiotics.py  theTypes.py  theTypesCallableFunction.py
hunterMakesPy/assimilate/: __init__.py  _theSSOT.py  chopShop.py  exportStub.py  refine_humpy.py  synchronizeFiles.py
hunterMakesPy/tests/: __init__.py  conftest.py  test_coping.py  test_dataStructures.py  test_filesystemToolkit.py  test_parseParameters.py  test_theTypes.py
hunterMakesPy/tests/dataSamples/: rle.py
src/hunterMakesPy/: dataStructures.py  filesystemToolkit.py  parseParameters.py  theTypesCallableFunction.py
tests/: conftest.py  test_dataStructures.py  test_filesystemToolbox.py  test_parseParameters.py
