[project]
name = "hunterMakesPy"
version = "0.5.1"
description = "Easy Python functions making making functional Python functions easier."
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-NC-4.0"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "attribute loading",
  "concurrency limit",
  "configuration",
  "cytoolz",
  "defensive programming",
  "dictionary merging",
  "directory creation",
  "dynamic import",
  "error propagation",
  "file system utilities",
  "input validation",
  "integer parsing",
  "module loading",
  "nested data structures",
  "package settings",
  "parameter validation",
  "pytest",
  "string extraction",
  "test utilities",
  "toolz",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/hunterMakesPy", Issues = "https://github.com/hunterhogan/hunterMakesPy/issues", Repository = "https://github.com/hunterhogan/hunterMakesPy" }
dependencies = [
  "autoflake",
  "charset_normalizer",
  "isort",
  "more_itertools",
  "numpy",
  "typing_extensions>=4.10.0",
]
optional-dependencies = { development = [
  "astToolkit",
  "setuptools>=62.3",
  "pytest-cov",
], testing = [
  "cython",
  "pytest",
  "pytest-xdist",
] }
import-names = [
  "humpy_cytoolz",
  "humpy_cytoolz.curried",
  "humpy_cytoolz.tests",
  "humpy_tlz",
  "humpy_toolz",
  "humpy_toolz.curried",
  "humpy_toolz.sandbox",
  "humpy_toolz.sandbox.tests",
  "humpy_toolz.tests",
  "hunterMakesPy",
  "hunterMakesPy.tests",
]

[build-system]
requires = [
  "cython",
  "setuptools>=62.3",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = ""

test-command = "pytest"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.coverage]
report = { exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
], ignore_errors = false }
run = { branch = true, concurrency = [
  "multiprocessing",
], data_file = "tests/coverage/.coverage", omit = [
  "tests/*",
  "hunterMakesPy/tests/*",
  "humpy_toolz/sandbox/tests",
  "humpy_toolz/tests",
  "humpy_cytoolz/tests",
], parallel = true, source = [
  ".",
] }

[tool.pytest]
addopts = ["--color=auto"]
log_auto_indent = "On"
testpaths = [
  "humpy_cytoolz/tests",
  "humpy_toolz/sandbox/tests",
  "humpy_toolz/tests",
  "hunterMakesPy/tests",
]

[tool.setuptools]
ext-modules = [
  { name = "humpy_cytoolz.dicttoolz", sources = ["humpy_cytoolz/dicttoolz.pyx"] },
  { name = "humpy_cytoolz.functoolz", sources = ["humpy_cytoolz/functoolz.pyx"] },
  { name = "humpy_cytoolz.itertoolz", sources = ["humpy_cytoolz/itertoolz.pyx"] },
  { name = "humpy_cytoolz.recipes", sources = ["humpy_cytoolz/recipes.pyx"] },
  { name = "humpy_cytoolz.utils", sources = ["humpy_cytoolz/utils.pyx"] },
]
package-data = { "*" = [
  "*.c",
  "*.pxd",
  "*.pyi",
  "*.pyx",
  "py.typed",
  "Notice_of_Copyright.txt"
] }
packages = [
  "humpy_cytoolz.curried",
  "humpy_cytoolz.tests",
  "humpy_cytoolz",
  "humpy_tlz",
  "humpy_toolz",
  "humpy_toolz.curried",
  "humpy_toolz.sandbox.tests",
  "humpy_toolz.sandbox",
  "humpy_toolz.tests",
  "hunterMakesPy",
  "hunterMakesPy.tests",
]

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
