[project]
name = "hunterMakesPy"
version = "0.7.0"
description = "Easy Python functions making making functional Python functions easier."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "attribute loading",
  "configuration",
  "defensive programming",
  "dictionary merging",
  "dynamic import",
  "file system utilities",
  "input validation",
  "module loading",
  "package settings",
  "parameter validation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "autoflake",
  "charset_normalizer",
  "isort",
  "more_itertools",
  "numpy",
  "tomli",
  "typing_extensions>=4.10.0"
]
optional-dependencies = { development = ["pytest-cov"], testing = [
  "librosa",
  "pytest",
] }

[project.urls]
Documentation = "https://context7.com/hunterhogan/huntermakespy"
Donate = "https://www.patreon.com/integrated"
Homepage = "https://github.com/hunterhogan/hunterMakesPy"
Issues = "https://github.com/hunterhogan/hunterMakesPy/issues"
Repository = "https://github.com/hunterhogan/hunterMakesPy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage]
report = { exclude_lines = ["if TYPE_CHECKING:", "if __name__ == \"__main__\":"], ignore_errors = false }
run = { branch = true, data_file = "hunterMakesPy/tests/coverage/.coverage", omit = [
  "hunterMakesPy/tests/*"
], source = ["."] }

[tool.pytest]
addopts = ["--color=auto"]
log_auto_indent = "On"
testpaths = ["hunterMakesPy/tests"]

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = ["hunterMakesPy", "hunterMakesPy.tests"]

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
